fix: Adjust vertical alignment and padding in AsciiDoc styles
This commit refines the styling for AsciiDoc callouts and description lists.
Specifically, it adjusts the vertical alignment of content within callout
lists and description lists for better visual presentation.

--- a/_sass/06-components/asciidoctor/_callouts.scss
+++ b/_sass/06-components/asciidoctor/_callouts.scss
@@ -51,8 +51,8 @@ pre .conum[data-value] {
   }
 
   td:last-child {
-    padding-bottom: settings.$spacing-heading-bottom;
     width: auto;
+    vertical-align: middle;
   }
 }
 
